[project]
name = "funlbm"
version = "1.1.92"
description = "funlbm"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "click>=8.1.8", "funtable>=1.0.25", "funtecplot>=1.0.1", "funutil>=1.0.14", "funvtk>=1.0.9", "torch>=2.2.0", "transforms3d>=0.4.2",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[project.scripts]
funlbm = "funlbm.server.script:funlbm"

[tool.setuptools]
license-files = []

[tool.uv]
package = true
